# arboreus_examples

./: INFO  readme.md
c/: integer_to_string.c
c/Months/: CMakeLists.txt  main.c
c/SQLite/SQLite_v6/: CMakeLists.txt  main.c
c/convert/: string_to_integer.c
c/digitsCounter/: main.c
c/digitsOrderCounter/: main.c
c/digitsReverse/: main.c
c/headers/: integer_to_string.h  string_to_integer.h
cmake/Variables/VariableScope_v1/: CMakeLists.txt  main.cpp
cmake/Variables/VariableScope_v1/Subdir1/: CMakeLists.txt  asubdir1.cpp  asubdir1.h
cmake/Variables/VariableScope_v1/Subdir2/: CMakeLists.txt  asubdir2.cpp  asubdir2.h
cpp/: LICENSE  file_stream_v01.cpp  file_stream_v02.cpp  inheritance_v01.cpp  inheritance_v02.cpp  polymorphism_v01.cpp
cpp/AbstractClass/: CMakeLists.txt
cpp/Basic/: array_v01.cpp  inheritance_v01.cpp  parametrised_class_v01.cpp  static.cpp  template_v01.cpp
cpp/Boost/SocketClient_v1/: CMakeLists.txt  main.cpp  mainpch.h
cpp/FFMPEG/FFMPEG_v1/: CMakeLists.txt  main.cpp
cpp/Limits/Limits_v1/: CMakeLists.txt  main.cpp
cpp/ML/LinearRegression/LinearRegression_v1/: CMakeLists.txt  main.cpp  mainpch.h
cpp/ML/LinearRegression/LinearRegression_v1/Data/: data.csv
cpp/ML/LinearRegression/LinearRegression_v1/ML/: aetl.cpp  aetl.h  alinearregression.cpp  alinearregression.h
cpp/ML/LogisticRegression/LogisticRegression_v1/: CMakeLists.txt  main.cpp  mainpch.h
cpp/ML/LogisticRegression/LogisticRegression_v1/Data/: data.csv
cpp/ML/LogisticRegression/LogisticRegression_v1/ML/: aetl.cpp  aetl.h  alogisticregression.cpp  alogisticregression.h
cpp/MPI/MPI_v2/: CMakeLists.txt  main.cpp
cpp/MPI/MPI_v3/: CMakeLists.txt  main.cpp
cpp/Math/Integral/Integral_v1/: CMakeLists.txt  main.cpp
cpp/Math/Integral/Integral_v1/Integral/: aintegral.cpp  aintegral.h
cpp/OpenCV/OpenCV_RTSP_to_file_v1/: CMakeLists.txt  main.cpp
cpp/OpenCV/OpenCV_v1/: CMakeLists.txt  main.cpp
cpp/OpenSSL/OpenSSL_v1/: CMakeLists.txt  main.cpp  main_pch.h
cpp/Operators/: Operators.pro  aglobal.cpp  aglobal.h  aoperatorindex.hpp  main.cpp
cpp/String/: CMakeLists.txt  aStringAssign.cpp  aStringBasic.cpp  aStringBasic.h  main.cpp
cpp/UsingSwiftCPPInterop/UsingSwiftCPPInterop_v1/: CMakeLists.txt  main.cpp  mainpch.h
cpp/UsingSwiftCPPInterop/UsingSwiftCPPInterop_v1/CMake/: SwiftCPPInterop.cmake
cpp/UsingSwiftCPPInterop/UsingSwiftCPPInterop_v1/Swift/: atestmodule.swift
objective-c/: LICENSE
objective-c/HomeIndicatorHide/: HomeIndicatorHide_v1.mov
objective-c/Localization/: localizationDemo_v2.mov
objective-c/VLCTestObjectiveC/: Podfile
qt/CPPCustomQMLComponent/: CPPCustomQMLComponent.pro  cppcustomqmlcomponent.cpp  main.cpp
qt/CURL/: CURL.pro  main.cpp  main.qml
qt/ComandLineParcer/: main.cpp
qt/Enum/: Enum.pro  ademo.cpp  ademo.h  aglobal.h  enum.h  main.cpp  main.qml
qt/FilesAndDirs/: aglobal.h  main.cpp
qt/Form/: Form_v1.mov
qt/HandlingQMLFromCPP/: ButtonExit.qml  HandlingQMLFromCPP.pro  PaddingItem.qml  main.cpp  main.qml
qt/Localization/: Localization.pro  QtLanguage_en.qm  QtLanguage_en.ts  QtLanguage_ru.qm  QtLanguage_ru.ts  atranslator.cpp  main.cpp  main.qml  translations.qrc
qt/MobileStatusBar/: main.cpp  main.qml
qt/Navigation/: main.qml
qt/OpenCV/: OpenCV.pro  main.cpp  main.qml
qt/QHashObjectStore/: dispatcher.h  objectprimitive.cpp
qt/QThread/: QThread.pro  aglobal.h  main.cpp  main.qml
qt/Subscription/: Subscription.pro  (+11 more)
qt6/CMake/Android/CustomLogger/CustomLogger_v1/: CMakeLists.txt  Main.qml  main.cpp  main_pch.h
qt6/CMake/Boost/Boost_v1/: CMakeLists.txt  main.cpp  main.qml
qt6/CMake/Boost/Boost_v1/cpp/Asio/: CMakeLists.txt  aasio.cpp  aasio.h
qt6/CMake/Boost/Boost_v1/cpp/Logger/: alogger.cpp  alogger.h
qt6/CMake/Boost/EchoServer_v1/: CMakeLists.txt  main.cpp  mainpch.h
qt6/CMake/Enum/Enum_v1/Enum_v1/: CMakeLists.txt  Main.qml  aenumtemplate.h  main.cpp  main_pch.h  test.cpp  test.h
qt6/CMake/Enum/Enum_v1/Enum_v1/Enums/: aenumtype1.cpp  aenumtype1.h
qt6/CMake/OpenSSL/OpenSSL_v3/LibOpenSSL_v3/: CMakeLists.txt  alibopenssl_v3.cpp  alibopenssl_v3.h  alibopenssl_v3_pch.h
qt6/CMake/ProjectArchitecture/ProjectArchitecture_v1/Application/: CMakeLists.txt  main.cpp  main.qml
qt6/CMake/ProjectArchitecture/ProjectArchitecture_v1/Lib2/: CMakeLists.txt
qt6/CMake/ProjectArchitecture/ProjectArchitecture_v2/Lib1/: CMakeLists.txt  libone.cpp  libonepch.h
qt6/CMake/ProjectArchitecture/ProjectArchitecture_v3/Mobile/: CMakeLists.txt  Mobile.cmake  main.cpp  main.qml
qt6/CMake/ProjectArchitecture/ProjectArchitecture_v4/RootApplication_v4/: CMakeLists.txt  Library2_v4  Main.qml  main.cpp  rootapplication_v4_pch.h
qt6/CMake/SQLlite3/SQLite3_v1/: CMakeLists.txt  main.cpp
qt6/CMake/SQLlite3/SQLite3_v2/: CMakeLists.txt  Main.qml  main.cpp
qt6/CMake/SQLlite3/SQLite3_v2/SQLite/: asqlite.cpp  asqlite.h
qt6/CMake/UsingCPPSwiftInterop/UsingCPPSwiftInterop_v1/: CMakeLists.txt  Main.qml  main.cpp
qt6/CMake/UsingCPPSwiftInterop/UsingCPPSwiftInterop_v1/CMake/: SwiftCPPInterop.cmake
qt6/CMake/UsingCPPSwiftInterop/UsingCPPSwiftInterop_v1/Swift/: atestmodule.swift
qt6/CMake/UsingObjectiveC/UsingObjectiveC_v1/: CMakeLists.txt  main.cpp  main.qml  mainpch.h
qt6/CMake/UsingObjectiveC/UsingObjectiveC_v1/Logger/: aloggerglobal.h
qt6/CMake/UsingObjectiveC/UsingObjectiveC_v1/UsingObjectiveC_v1/: CMakeLists.txt  Main.qml  main.cpp  main_pch.h
qt6/CMake/UsingObjectiveC/UsingObjectiveC_v1/UsingObjectiveC_v1/ObjectiveC/: aobjectivec.cpp  aobjectivec.h  aobjectivecnative.h  aobjectivecnativeglobal.h
qt6/CMake/UsingObjectiveC/UsingObjectiveC_v1/cpp/Logger/: alogger.cpp
qt6/CMake/UsingObjectiveC/UsingObjectiveC_v1/cpp/ObjectiveC/: CMakeLists.txt  aobjectivec.cpp  aobjectivec.h  aobjectivec.mm  aobjectivecnative.h  aobjectivecnative.mm  aobjectivecnativeglobal.h  aobjectivecpch.h
qt6/CMake/UsingSwift/UsingSwift_v1/: CMakeLists.txt  aswiftiosnative.mm  main.cpp  main.qml
qt6/CMake/UsingSwift/UsingSwift_v2/: CMakeLists.txt  main.cpp  main.qml
qt6/CMake/UsingSwift/UsingSwift_v2/cpp/Swift/: CMakeLists.txt  aswiftbridging.h
(+4201 files in other folders)
